<resources>
    <!-- LABELS-->
    <string name="app_name">Houses</string>
    <string name="title_activity_maps">Map Marker</string>
    <string name="title_activity_login">Log in / Sign up</string>

    <!-- Add House editText and textView fields -->
    <string name="hint_houseAddress">House Address</string>
    <string name="hint_houseDescription">Description </string>
    <string name="hint_bedrooms">Bed</string>
    <string name="hint_bathrooms">Bath</string>
    <string name="hint_listPrice">List Price</string>
    <string name="hint_soldPrice">Sold Price</string>
    <string name="hint_list_title">Listed €</string>
    <string name="hint_sold_title">Sold €</string>
    <string name="hint_listDate">"__/__/____"</string>
    <string name="hint_soldDate">"__/__/____"</string>
    <string name="empty_lat">00.000000</string>
    <string name="empty_lng">00.000000</string>
    <string name="lng_title">Long:</string>
    <string name="lat_title">Lat:</string>

    <!-- MENU ITEMS -->
    <string name="menu_addHouse">Add</string>
    <string name="menu_cancelHouse">Cancel</string>
    <string name="menu_mapMode">Show Map</string>
    <string name="menu_updateHouse">Update</string>
    <string name="menu_deleteHouse">Delete</string>
    <string name="menu_logout">Logout</string>

    <!-- CRUD -->
    <string name="Update_house">Update House</string>
    <string name="button_addHouse">Add House</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_house_image">Select house image</string>
    <string name="change_houseImage">Change House Image</string>
    <string name="button_deleterHouse">Delete House</string>
    <string name="button_location">Set Location</string>
    <string name="button_listDate">Add List Date</string>
    <string name="button_soldDate">Add Sold Date</string>
    <string name="change_list_date">Change List Date</string>
    <string name="change_sold_date">Change Sold Date</string>

    <!-- Warnings and messages to user -->
    <string name="dialog_msg_confirm_irreversible_stuff">Are you sure you want to delete this house?</string>
    <string name="enter_listPrice">Please enter a list price</string>
    <string name="enter_houseAddress">Please enter a house address</string>
    <string name="title_activity_house_maps">Map of All Houses</string>
    <string name="fab_info_button">More information</string>

    <!-- USER -->
    <string name="email_Title">E-mail </string>
    <string name="password_Title">Password </string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>



    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_map">MapActivity</string>


</resources>