<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.houses.views.house.HouseView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/primaryTextColor" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">


        <EditText
            android:id="@+id/houseAddress"
            android:layout_width="355dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/hint_houseAddress"
            android:textSize="12sp"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/listPrice"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_baseline_sell_24"
            android:drawablePadding="6dp"
            android:ems="10"
            android:hint="@string/hint_listPrice"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/soldPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/houseAddress" />


        <EditText
            android:id="@+id/soldPrice"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_baseline_sell_24"
            android:drawablePadding="6dp"
            android:ems="10"
            android:hint="@string/hint_soldPrice"
            android:textSize="12sp"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.824"
            app:layout_constraintStart_toEndOf="@+id/listPrice"
            app:layout_constraintTop_toBottomOf="@+id/houseAddress" />

        <Button
            android:id="@+id/selectListDate"
            android:layout_width="144dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/primaryLightColor"
            android:text="@string/button_listDate"
            android:textColor="@color/primaryTextColor"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listDate" />

        <Button
            android:id="@+id/selectSoldDate"
            android:layout_width="144dp"
            android:layout_height="62dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/primaryLightColor"
            android:text="@string/button_soldDate"
            android:textColor="@color/primaryTextColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/selectListDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soldDate" />

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="144dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/button_addImage"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/placemarkLocation"
            app:layout_constraintEnd_toEndOf="@+id/selectListDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <EditText
            android:id="@+id/bedrooms"
            android:layout_width="76dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_baseline_bed_24"
            android:drawablePadding="6dp"
            android:ems="10"
            android:hint="@string/hint_bedrooms"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/bathrooms"
            app:layout_constraintEnd_toStartOf="@+id/bathrooms"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectListDate" />

        <EditText
            android:id="@+id/bathrooms"
            android:layout_width="76dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_outline_bathtub_24"
            android:drawablePadding="6dp"
            android:ems="10"
            android:hint="@string/hint_bathrooms"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/description"
            app:layout_constraintStart_toEndOf="@+id/bedrooms"
            app:layout_constraintTop_toBottomOf="@+id/selectListDate" />

        <EditText
            android:id="@+id/description"
            android:layout_width="162dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_outline_description_24"
            android:drawablePadding="6dp"
            android:ems="10"
            android:hint="@string/hint_houseDescription"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/bathrooms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectSoldDate" />

        <ImageView
            android:id="@+id/houseImage"
            android:layout_width="375dp"
            android:layout_height="117dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseImage"
            app:srcCompat="@mipmap/ic_app_launcher" />

        <Button
            android:id="@+id/placemarkLocation"
            android:layout_width="144dp"
            android:layout_height="62dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/button_location"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/selectSoldDate"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/listDate"
            android:layout_width="145dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/soldDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listPrice" />

        <TextView
            android:id="@+id/soldDate"
            android:layout_width="138dp"
            android:layout_height="32dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/listDate"
            app:layout_constraintTop_toBottomOf="@+id/soldPrice" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView2"
            android:layout_width="362dp"
            android:layout_height="190dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/houseImage"
            app:layout_constraintVertical_bias="0.433" />

        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/empty_lat"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/latTitle"
            app:layout_constraintTop_toBottomOf="@+id/houseImage" />

        <TextView
            android:id="@+id/lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/empty_lng"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/houseImage" />

        <TextView
            android:id="@+id/latTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lat_title"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/houseImage" />

        <TextView
            android:id="@+id/lngTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/lng_title"
            android:textSize="11sp"
            app:layout_constraintEnd_toStartOf="@+id/lng"
            app:layout_constraintTop_toBottomOf="@+id/houseImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>